finish flex-box assignment

--- a/index.html
+++ b/index.html
@@ -1,11 +1,39 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <meta charset="utf-8">
     <link rel="stylesheet" href="css/styles.css" media="screen" title="no title" charset="utf-8">
+    <meta charset="utf-8">
     <title>Flex Boxin'</title>
   </head>
   <body>
+    <div class="wrapper">
+      <div class="square1 box">
 
+      </div>
+      <div class="square2 box">
+
+      </div>
+      <div class="square3 box">
+
+      </div>
+      <div class="square4 box">
+
+      </div>
+      <div class="square5 box">
+
+      </div>
+      <div class="square6 box">
+
+      </div>
+      <div class="square7 box">
+
+      </div>
+      <div class="square8 box">
+
+      </div>
+      <div class="square9 box">
+
+      </div>
+    </div>
   </body>
 </html>
